objdir/test/spec/good/TC5023_MultipleTimeStampCueComponent.vtt
WEBVTT

00:11.000 --> 00:15.000
We <00:12.000>are in<0:13:00> New York City