objdir/test/spec/bad/TC034_DisallowAnnotationBold.vtt
WEBVTT

00:11.000 --> 00:15.000
We <b Annotation Here>are in New York City</b>